- Add tooltip for bead and selector colours, - Fix issue where newly added rows and columns are initialized with wrong colour format, - Add material angular.

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
     background: #caac80;
     cursor: default;
 }
+
 .control-bar {
     padding: 5px 25px;
     background-color: #3d251f;
@@ -33,6 +34,13 @@ body {
     border:solid 1px black;
 }
 
+.color-label {
+    color: white;
+    position: absolute;
+    text-align: center;
+    margin: 10px;
+    width: 100%;
+}
 .color-indicator {
     max-width: 50%;
     height: 5vw;
